--- a/NewNsns/NewNsns/Views/MainView.axaml
+++ b/NewNsns/NewNsns/Views/MainView.axaml
@@ -18,11 +18,9 @@
         
         <!-- Разметка -->
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="35" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto"/>
-            
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -34,60 +32,23 @@
             <RowDefinition Height="40" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
-        <!--  Боковая панель  -->
-        <StackPanel Background="LightGray" Grid.RowSpan="7" Orientation="Vertical">
-            <Image Name="SettingsBtn" Source="../Assets/cog.png" Tapped="SettingsBtn_OnTapped">
-                 <FlyoutBase.AttachedFlyout>
-                     <MenuFlyout>
-                         <StackPanel Height="1000" Width="100">
-                             <!-- TODO Кнопки Избранное и Связь -->
-                             <Button Name="FavoritesBtn" Content="Favorites"/>
-                             <Button Name="ContactBtn" Content="Contact us" Margin="0,10,0,0" Command="{Binding Contact}"/>
-                         </StackPanel>
-                     </MenuFlyout>
-                 </FlyoutBase.AttachedFlyout>
-            </Image>
-        </StackPanel>
-
-        <!--  Выбор режима  -->
-        <StackPanel
-            Background="LightGray"
-            Grid.Column="2"
-            Grid.Row="1"
-            Orientation="Horizontal" Width="260" Height="50">
-
-            <Button Name="NutrientsBtn" Width="110"
-                    FontSize="20" Margin="10,0,10,0"
-                    Click="NutrientsMode_OnClick"
-                    Command="{Binding NutrientModChange}">
-                    Nutrients
-            </Button>
-
-            <!-- TODO Режим рецептов --> 
-            <Button Name="RecipeBtn" Width="110"
-                    HorizontalContentAlignment="Center"
-                    FontSize="20" Margin="10,0,10,0"
-                    Click="RecipeBtn_OnClick"
-                    Command="{Binding RecipeModChange}">
-                    Recipes
-            </Button>
-            
-        </StackPanel>
         
         <!-- Поле для ввода -->
-        <TextBox Name="TBox" Grid.Column="2" Grid.Row="3" Text="{Binding UserInput}" Width="300" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True"/>
+        <TextBox Name="TBox" Grid.Column="1" Grid.Row="3" Text="{Binding UserInput}"
+                 Width="300" TextWrapping="Wrap"
+                 AcceptsReturn="True" AcceptsTab="True"/>
         
         <!-- Окно вывода --> 
-        <!-- TODO Предупреждения -->
-        <StackPanel Grid.Row="4" Grid.Column="2" VerticalAlignment="Center">
+        
+        <StackPanel Grid.Row="4" Grid.Column="1" VerticalAlignment="Center">
             <TextBlock Name="TBlock" Background="LightGray" Text="{Binding Message}"
                        TextAlignment="Center" IsVisible="{Binding IsTboxVisible}"
                        FontSize="20" Foreground="Black"/>  
         </StackPanel>
         
+        
         <!--  Поиск  -->
-        <StackPanel Grid.Column="2" Grid.Row="5">
+        <StackPanel Grid.Column="1" Grid.Row="5">
             <Button 
                 Name="SearchBtn"
                 Background="Black"
